fixed API documentation
