# docs/swagger.json
@@ -238,18 +238,18 @@
         "handlers.CreateUserRequest": {
             "type": "object",
             "required": [
+                "firebaseID",
                 "inviteCode",
-                "name",
-                "registrationToken"
+                "name"
             ],
             "properties": {
+                "firebaseID": {
+                    "type": "string"
+                },
                 "inviteCode": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "registrationToken": {
                     "type": "string"
                 }
             }
